2008-03-18  Sam Steingold  <sds@gnu.org>

	* ffi.tst: update tests for versioned symbols

2008-03-02  Sam Steingold  <sds@gnu.org>

	* macros8.tst (check-const-fold): check constant folding

2008-02-19  Sam Steingold  <sds@gnu.org>

	* ffi.tst: foreign-library --> open-foreign-library;
	lookup-foreign-variable --> find-foreign-variable

2008-02-19  Sam Steingold  <sds@gnu.org>

	* macro8.tst: test new macro COMPILE-TIME-VALUE

2008-02-11  Sam Steingold  <sds@gnu.org>

	* iofkts.tst: test for bug #[ 1890854 ]:
	read-preserving-whitespace eats whitespace after quoted obj

2008-02-06  Sam Steingold  <sds@gnu.org>

	* macro8.tst ("test-crlf-print-read.lisp"): use
	sys::set-output-stream-fasl to ensure faithful i/o

2008-01-30  Sam Steingold  <sds@gnu.org>

	* iofkts.tst: check that (copy-pprint-dispatch)
	returns *print-pprint-dispatch-table*;
	in all tests, bind *print-pprint-dispatch-table*
	to (copy-pprint-dispatch nil), not (copy-pprint-dispatch)

2008-01-25  Sam Steingold  <sds@gnu.org>

	* path.tst: use EXT:DELETE-DIRECTORY, EXT:MAKE-DIRECTORY, and
	EXT:RENAME-DIRECTORY instead of the deprecated EXT:DELETE-DIR,
	EXT:MAKE-DIR, and EXT:RENAME-DIR
	test (directory "foo/" :full t)

2008-01-22  Sam Steingold  <sds@gnu.org>

	* ffi.tst (toupper, pcre_version): add tests

2008-01-17  Sam Steingold  <sds@gnu.org>

	* path.tst: test (open "..." :direction :output :if-exists
	:rename-and-delete)

2008-01-13  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-all-tests) [mt]: also run mt.tst
	* mt.tst: new file

2007-12-12  Sam Steingold  <sds@gnu.org>

	* type.tst: test all atomic types in table 4-2
	http://www.lisp.org/HyperSpec/Body/sec_4-2-3.html

2007-12-20  Sam Steingold  <sds@gnu.org>

	* type.tst: add tests for bug [ 1854698 ]:
	BYTE is a type, but is unacceptable input to TYPEP

2007-11-25  Sam Steingold  <sds@gnu.org>

	* mop.tst: add a test for
	http://clisp.cons.org/impnotes/mop-clisp.html#mop-clisp-warn

2007-11-21  Sam Steingold  <sds@gnu.org>
