@@ -1,3 +1,9 @@
+2008-03-27  Sam Steingold  <sds@gnu.org>
+
+	fix bug #[ 1683394 ]: TANH floating point overflow for large floats
+	* realtran.d (posF_tanh_posF): new function: 1-exp(-2x)/1+exp(-2x)
+	(R_tanh_R): use it instead of R_cosh_sinh_R_R
+
 2008-03-25  Sam Steingold  <sds@gnu.org>
 
 	* array.d, control.d, debug.d, eval.d, execname.c, hashtabl.d:
@@ -17,19 +23,19 @@
 
 2008-03-25  Sam Steingold  <sds@gnu.org>
 
-	fix bug [ 1924501 ]: cannot find gllib include
+	fix bug #[ 1924501 ]: cannot find gllib include
 	* makemake.in (CPPFLAGS): pass -Igllib here, not CFLAGS
 
 2008-03-24  Vladimir Volovich  <vvv2@users.sourceforge.net>
 	Sam Steingold  <sds@gnu.org>
 
-	fix bug [ 1924508 ]: undefined symbol getSP when linking lisp.run
+	fix bug #[ 1924508 ]: undefined symbol getSP when linking lisp.run
 	on Sparc Solaris 2.8 using Sun Studio 11
 	* spsparc.d, spsparc64.d: add global getSP
 
 2008-03-24  Sam Steingold  <sds@gnu.org>
 
-	fix bug [ 1924506 ]: void function cannot return value
+	fix bug #[ 1924506 ]: void function cannot return value
 	* foreign.d (convert_to_foreign): "return void" does not work on
 	Solaris 2.8
 
@@ -90,7 +96,7 @@
 
 2008-03-18  Drutsa Pavel  <rawlik@users.sourceforge.net>
 
-	fix bug [ 1918017 ]: new-clx:gcontext-clip-mask does not set rectangles
+	fix bug #[ 1918017 ]: new-clx:gcontext-clip-mask does not set rectangles
 	* modules/clx/new-clx/clx.f (XLIB:SET-GCONTEXT-CLIP-MASK): do not
 	divide n by 4 when passing to XSetClipRectangles - it has already
 	been done by get_seq_len()
